--- a/css/scss/admin/modal/seat-id.scss
+++ b/css/scss/admin/modal/seat-id.scss
@@ -1,9 +1,9 @@
 .seatreg-tabs-content {
-    .seat-id-modal {
+    .genericseatterm-id-modal {
         h5 {
             margin-top: 8px;
         }
-        .seat-id-grid {
+        .genericseatterm-id-grid {
             display: grid;
             row-gap: 8px;
             grid-template-columns: auto 1fr 1fr;
